--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     color: #fff;
   }
 
-  /* Header */
   header {
     background-color: #000;
     padding: 20px 40px;
@@ -38,11 +37,8 @@
     font-weight: bold;
   }
 
-  nav a:hover {
-    color: #fff;
-  }
+  nav a:hover { color: #fff; }
 
-  /* Profile Section */
   .profile {
     text-align: center;
     padding: 50px 20px;
@@ -68,7 +64,6 @@
     color: #fff;
   }
 
-  /* Projects Section */
   .projects {
     padding: 50px 20px;
     background-color: #111;
@@ -97,34 +92,13 @@
     transition: transform 0.3s;
   }
 
-  .project:hover {
-    transform: scale(1.05);
-  }
+  .project:hover { transform: scale(1.05); }
 
-  .project h3 {
-    margin-top: 0;
-    color: #00ff00;
-    font-size: 1.2rem;
-  }
+  .project h3 { margin-top: 0; color: #00ff00; font-size: 1.2rem; }
+  .project p { color: #fff; font-size: 0.95rem; line-height: 1.4; }
+  .project a { color: #00ff00; text-decoration: none; font-weight: bold; }
+  .project a:hover { text-decoration: underline; color: #fff; }
 
-  .project p {
-    color: #fff;
-    font-size: 0.95rem;
-    line-height: 1.4;
-  }
-
-  .project a {
-    color: #00ff00;
-    text-decoration: none;
-    font-weight: bold;
-  }
-
-  .project a:hover {
-    text-decoration: underline;
-    color: #fff;
-  }
-
-  /* About Section */
   .about {
     padding: 50px 20px;
     background: url('images/dovi.jpg') center/cover no-repeat;
@@ -132,53 +106,21 @@
     text-align: center;
   }
 
-  .about h2 {
-    font-size: 2rem;
-    color: #00ff00;
-    margin-bottom: 20px;
-  }
+  .about h2 { font-size: 2rem; color: #00ff00; margin-bottom: 20px; }
+  .about p { max-width: 700px; margin: 0 auto 20px auto; line-height: 1.6; }
+  .about a { color: #00ff00; text-decoration: none; font-weight: bold; }
+  .about a:hover { color: #fff; }
 
-  .about p {
-    max-width: 700px;
-    margin: 0 auto 20px auto;
-    line-height: 1.6;
-  }
-
-  .about a {
-    color: #00ff00;
-    text-decoration: none;
-    font-weight: bold;
-  }
-
-  .about a:hover {
-    color: #fff;
-  }
-
-  /* Contact Section */
   .contact {
     padding: 50px 20px;
     background-color: #111;
     text-align: center;
   }
 
-  .contact h2 {
-    font-size: 2rem;
-    color: #00ff00;
-    margin-bottom: 20px;
-  }
+  .contact h2 { font-size: 2rem; color: #00ff00; margin-bottom: 20px; }
+  .contact a { color: #00ff00; text-decoration: none; margin: 0 10px; font-weight: bold; }
+  .contact a:hover { color: #fff; }
 
-  .contact a {
-    color: #00ff00;
-    text-decoration: none;
-    margin: 0 10px;
-    font-weight: bold;
-  }
-
-  .contact a:hover {
-    color: #fff;
-  }
-
-  /* Footer */
   footer {
     text-align: center;
     padding: 20px;
@@ -202,7 +144,7 @@
 
 <section id="profile" class="profile">
   <img src="images/about-me.jpg" alt="Profile Picture">
-  <h2>Hi there!</h2>
+  <h2>Welcome</h2>
   <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Each project demonstrates practical solutions and innovative approaches to modern security challenges. Beyond these projects, I am passionate about advancing in cybersecurity and contributing to securing digital landscapes.</p>
 </section>
 
@@ -279,5 +221,4 @@
   © 2025 Tanaka Shumba
 </footer>
 
-</body>
-</html>
+</body
