--- a/index.html
+++ b/index.html
@@ -1,224 +1,284 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tanaka Shumba | Cybersecurity Portfolio</title>
-<style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #000;
-    color: #fff;
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tanaka Shumba | Cybersecurity Portfolio</title>
+    <style>
+        /* General Reset */
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
-  header {
-    background-color: #000;
-    padding: 20px 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 2px solid #00ff00;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-  }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #000; /* Black background */
+            color: #fff;
+            overflow-x: hidden;
+            position: relative;
+        }
 
-  header h1 {
-    color: #00ff00;
-    margin: 0;
-    font-size: 1.5rem;
-  }
+        /* Tech particles canvas */
+        #tech-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
 
-  nav a {
-    color: #00ff00;
-    text-decoration: none;
-    margin-left: 20px;
-    font-weight: bold;
-  }
+        header {
+            text-align: center;
+            padding: 50px 20px 30px 20px;
+        }
 
-  nav a:hover { color: #fff; }
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 3px solid #00ff00; /* lime green border */
+            margin-bottom: 20px;
+        }
 
-  .profile {
-    text-align: center;
-    padding: 50px 20px;
-  }
+        header h1 {
+            font-size: 2.5em;
+            color: #00ff00;
+        }
 
-  .profile img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    border: 3px solid #00ff00;
-  }
+        header p {
+            font-size: 1.1em;
+            margin-top: 10px;
+            color: #ccc;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+        }
 
-  .profile h2 {
-    margin-top: 20px;
-    font-size: 2rem;
-    color: #00ff00;
-  }
+        section {
+            padding: 60px 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
 
-  .profile p {
-    max-width: 700px;
-    margin: 10px auto 0 auto;
-    line-height: 1.6;
-    color: #fff;
-  }
+        h2 {
+            color: #00ff00;
+            margin-bottom: 20px;
+            font-size: 2em;
+            text-align: center;
+        }
 
-  .projects {
-    padding: 50px 20px;
-    background-color: #111;
-  }
+        /* About Section */
+        #about p {
+            line-height: 1.6;
+            font-size: 1.1em;
+            color: #ccc;
+            text-align: center;
+            max-width: 800px;
+            margin: auto;
+        }
 
-  .projects h2 {
-    text-align: center;
-    font-size: 2rem;
-    color: #00ff00;
-    margin-bottom: 40px;
-  }
+        .cv-link {
+            display: inline-block;
+            padding: 12px 25px;
+            margin-top: 20px;
+            background-color: #00ff00;
+            color: #000;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
 
-  .project-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-  }
+        .cv-link:hover {
+            background-color: #00cc00;
+        }
 
-  .project {
-    background-color: #000;
-    border: 2px solid #00ff00;
-    border-radius: 10px;
-    padding: 20px;
-    width: 300px;
-    transition: transform 0.3s;
-  }
+        /* Projects Section */
+        .projects-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
 
-  .project:hover { transform: scale(1.05); }
+        .project-card {
+            background-color: #111;
+            border: 2px solid #00ff00;
+            padding: 20px;
+            border-radius: 8px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
 
-  .project h3 { margin-top: 0; color: #00ff00; font-size: 1.2rem; }
-  .project p { color: #fff; font-size: 0.95rem; line-height: 1.4; }
-  .project a { color: #00ff00; text-decoration: none; font-weight: bold; }
-  .project a:hover { text-decoration: underline; color: #fff; }
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0 15px #00ff00;
+        }
 
-  .about {
-    padding: 50px 20px;
-    background: url('images/dovi.jpg') center/cover no-repeat;
-    color: #fff;
-    text-align: center;
-  }
+        .project-card h3 {
+            color: #00ff00;
+            margin-bottom: 10px;
+            font-size: 1.2em;
+        }
 
-  .about h2 { font-size: 2rem; color: #00ff00; margin-bottom: 20px; }
-  .about p { max-width: 700px; margin: 0 auto 20px auto; line-height: 1.6; }
-  .about a { color: #00ff00; text-decoration: none; font-weight: bold; }
-  .about a:hover { color: #fff; }
+        .project-card p {
+            color: #ccc;
+            font-size: 0.95em;
+            margin-bottom: 10px;
+        }
 
-  .contact {
-    padding: 50px 20px;
-    background-color: #111;
-    text-align: center;
-  }
+        .project-card a {
+            color: #00ff00;
+            text-decoration: none;
+            font-weight: bold;
+        }
 
-  .contact h2 { font-size: 2rem; color: #00ff00; margin-bottom: 20px; }
-  .contact a { color: #00ff00; text-decoration: none; margin: 0 10px; font-weight: bold; }
-  .contact a:hover { color: #fff; }
+        .project-card a:hover {
+            text-decoration: underline;
+        }
 
-  footer {
-    text-align: center;
-    padding: 20px;
-    background-color: #000;
-    border-top: 2px solid #00ff00;
-    color: #00ff00;
-  }
+        /* Contact Section */
+        #contact {
+            text-align: center;
+        }
 
-</style>
+        #contact a {
+            display: inline-block;
+            margin: 10px 20px;
+            color: #00ff00;
+            text-decoration: none;
+            font-weight: bold;
+            border: 2px solid #00ff00;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        #contact a:hover {
+            background-color: #00ff00;
+            color: #000;
+        }
+
+        footer {
+            text-align: center;
+            padding: 30px 20px;
+            color: #555;
+            font-size: 0.9em;
+        }
+
+    </style>
 </head>
 <body>
+    <canvas id="tech-bg"></canvas>
 
-<header>
-  <h1>Tanaka Shumba</h1>
-  <nav>
-    <a href="#profile">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
+    <header>
+        <img src="images/about-me.jpg" alt="Tanaka Shumba">
+        <h1>Hey there</h1>
+        <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Beyond my projects, I am passionate about advancing in the cybersecurity field and contributing to securing digital landscapes.</p>
+        <a href="resume.pdf" target="_blank" class="cv-link">Download my CV</a>
+    </header>
 
-<section id="profile" class="profile">
-  <img src="images/about-me.jpg" alt="Profile Picture">
-  <h2>Welcome</h2>
-  <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Each project demonstrates practical solutions and innovative approaches to modern security challenges. Beyond these projects, I am passionate about advancing in cybersecurity and contributing to securing digital landscapes.</p>
-</section>
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="projects-container">
+            <div class="project-card">
+                <h3>Malware Analyzer</h3>
+                <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors.</p>
+                <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Ethical Hacking Sim</h3>
+                <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+                <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Cloud Security Checker</h3>
+                <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
+                <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Basic Pen Test</h3>
+                <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+                <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Simple IDS</h3>
+                <p>A basic IDS/IPS simulation in Python for detecting and preventing attacks.</p>
+                <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Cybersecurity Lab Series</h3>
+                <p>A collection of labs and scripts designed for hands-on cybersecurity learning.</p>
+                <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Secure Hospital System</h3>
+                <p>Python-based secure hospital management system focusing on patient data security.</p>
+                <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>VoIP Traffic Analyzer</h3>
+                <p>Python project that captures and analyzes VoIP RTP packets safely for educational use.</p>
+                <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Python Network Scanner</h3>
+                <p>Python tool for scanning networks and identifying connected devices and vulnerabilities.</p>
+                <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Healthcare System</h3>
+                <p>Flask-based healthcare management system to handle appointments, doctors, and payments.</p>
+                <a href="https://github.com/TanakaShumba/healthcare-system" target="_blank">View on GitHub</a>
+            </div>
+        </div>
+    </section>
 
-<section id="projects" class="projects">
-  <h2>My Projects</h2>
-  <div class="project-list">
-    <div class="project">
-      <h3>Malware Analyzer</h3>
-      <p>Python script simulating analyzing suspicious files and detecting potential malicious behaviors.</p>
-      <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Ethical Hacking Sim</h3>
-      <p>Python scripts simulating ethical hacking techniques for learning purposes.</p>
-      <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Cloud Security Checker</h3>
-      <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
-      <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Basic Pen Test</h3>
-      <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
-      <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Simple IDS</h3>
-      <p>A basic IDS/IPS simulation in Python for detecting and preventing attacks.</p>
-      <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Cybersecurity Lab Series</h3>
-      <p>Collection of labs and scripts for hands-on cybersecurity learning.</p>
-      <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Secure Hospital System</h3>
-      <p>Python-based secure hospital management system focusing on patient data security.</p>
-      <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>VoIP Traffic Analyzer</h3>
-      <p>Python project capturing and analyzing VoIP RTP packets safely for educational use.</p>
-      <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Python Network Scanner</h3>
-      <p>Tool for scanning networks and identifying connected devices and vulnerabilities.</p>
-      <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Healthcare System</h3>
-      <p>Flask-based healthcare management system handling appointments, doctors, and payments.</p>
-      <a href="https://github.com/TanakaShumba/healthcare-system" target="_blank">View on GitHub</a>
-    </div>
-  </div>
-</section>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <a href="mailto:tanakashumba04@gmail.com">Email Me</a>
+        <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
+    </section>
 
-<section class="about">
-  <h2>About Me</h2>
-  <p>This section uses a background image where you can showcase your CV or other personal details. Add your CV link here:</p>
-  <a href="files/Tanaka_Shuba_CV.pdf" target="_blank">Download CV</a>
-</section>
+    <footer>
+        © 2025 Tanaka Shumba
+    </footer>
 
-<section id="contact" class="contact">
-  <h2>Contact Me</h2>
-  <p>Feel free to reach out via email or LinkedIn:</p>
-  <a href="mailto:tanakashumba04@gmail.com">Email Me</a>
-  <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
-</section>
+    <script>
+        // Minimal 3D tech particles animation
+        const canvas = document.getElementById('tech-bg');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
 
-<footer>
-  © 2025 Tanaka Shumba
-</footer>
+        let particles = [];
+        for (let i = 0; i < 50; i++) {
+            particles.push({
+                x: Math.random() * canvas.width,
+                y: Math.random() * canvas.height,
+                vx: (Math.random() - 0.5) * 0.5,
+                vy: (Math.random() - 0.5) * 0.5,
+                size: Math.random() * 2 + 1
+            });
+        }
 
-</body
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = 'lime';
+            particles.forEach(p => {
+                ctx.beginPath();
+                ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+                ctx.fill();
+                p.x += p.vx;
+                p.y += p.vy;
+                if (p.x < 0 || p.x > canvas.width) p.vx *= -1;
+                if (p.y < 0 || p.y > canvas.height) p.vy *= -1;
+            });
+            requestAnimationFrame(animate);
+        }
+        animate();
+
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        });
+    </script>
+</body>
+</html>
