Add social media buttons to portfolio

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         #contact a {
             display: inline-block;
-            margin: 10px 20px;
+            margin: 10px 15px;
             color: #00ff00;
             text-decoration: none;
             font-weight: bold;
@@ -170,10 +170,15 @@
 
     <header>
         <img src="images/about-me.jpg" alt="Tanaka Shumba">
-        <h1>Hey there</h1>
+        <h1>Welcome</h1>
         <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Beyond my projects, I am passionate about advancing in the cybersecurity field and contributing to securing digital landscapes.</p>
         <a href="resume.pdf" target="_blank" class="cv-link">Download my CV</a>
     </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I am a cybersecurity professional focused on solving modern security challenges. This section can include additional details about my skills, experience, and career ambitions.</p>
+    </section>
 
     <section id="projects">
         <h2>My Projects</h2>
@@ -233,8 +238,11 @@
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <a href="mailto:tanakashumba04@gmail.com">Email Me</a>
+        <a href="mailto:tanakashumba04@gmail.com" target="_blank">Email</a>
         <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
+        <a href="https://www.instagram.com/tanakashumba_" target="_blank">Instagram</a>
+        <a href="https://www.tiktok.com/@tanakashumba" target="_blank">TikTok</a>
+        <a href="https://twitter.com/Shumba_rumba" target="_blank">X</a>
     </section>
 
     <footer>
