--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanaka Shumba | Cybersecurity Portfolio</title>
     <style>
-        /* General Reset */
+        /* Reset */
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
@@ -16,7 +16,7 @@
             position: relative;
         }
 
-        /* Tech particles canvas */
+        /* Minimal 3D tech particles background */
         #tech-bg {
             position: fixed;
             top: 0;
@@ -35,7 +35,7 @@
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            border: 3px solid #00ff00; /* lime green border */
+            border: 3px solid #00ff00;
             margin-bottom: 20px;
         }
 
@@ -51,29 +51,6 @@
             max-width: 700px;
             margin-left: auto;
             margin-right: auto;
-        }
-
-        section {
-            padding: 60px 20px;
-            max-width: 1000px;
-            margin: auto;
-        }
-
-        h2 {
-            color: #00ff00;
-            margin-bottom: 20px;
-            font-size: 2em;
-            text-align: center;
-        }
-
-        /* About Section */
-        #about p {
-            line-height: 1.6;
-            font-size: 1.1em;
-            color: #ccc;
-            text-align: center;
-            max-width: 800px;
-            margin: auto;
         }
 
         .cv-link {
@@ -92,7 +69,28 @@
             background-color: #00cc00;
         }
 
-        /* Projects Section */
+        section {
+            padding: 60px 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
+
+        h2 {
+            color: #00ff00;
+            margin-bottom: 20px;
+            font-size: 2em;
+            text-align: center;
+        }
+
+        #about p {
+            line-height: 1.6;
+            font-size: 1.1em;
+            color: #ccc;
+            text-align: center;
+            max-width: 800px;
+            margin: auto;
+        }
+
         .projects-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -134,7 +132,6 @@
             text-decoration: underline;
         }
 
-        /* Contact Section */
         #contact {
             text-align: center;
         }
@@ -170,15 +167,10 @@
 
     <header>
         <img src="images/about-me.jpg" alt="Tanaka Shumba">
-        <h1>Welcome</h1>
+        <h1>Hey there</h1>
         <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Beyond my projects, I am passionate about advancing in the cybersecurity field and contributing to securing digital landscapes.</p>
         <a href="resume.pdf" target="_blank" class="cv-link">Download my CV</a>
     </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I am a cybersecurity professional focused on solving modern security challenges. This section can include additional details about my skills, experience, and career ambitions.</p>
-    </section>
 
     <section id="projects">
         <h2>My Projects</h2>
@@ -238,9 +230,9 @@
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <a href="mailto:tanakashumba04@gmail.com" target="_blank">Email</a>
+        <a href="mailto:tanakashumba04@gmail.com">Email</a>
         <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
-        <a href="https://www.instagram.com/tanakashumba_" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/tanakashumba_/" target="_blank">Instagram</a>
         <a href="https://www.tiktok.com/@tanakashumba" target="_blank">TikTok</a>
         <a href="https://twitter.com/Shumba_rumba" target="_blank">X</a>
     </section>
@@ -250,7 +242,6 @@
     </footer>
 
     <script>
-        // Minimal 3D tech particles animation
         const canvas = document.getElementById('tech-bg');
         const ctx = canvas.getContext('2d');
         canvas.width = window.innerWidth;
