Update portfolio with new cybersecurity projects

--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanaka Shumba | Cybersecurity Portfolio</title>
     <style>
-        /* Reset */
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #000; /* Black background */
+            background-color: #000;
             color: #fff;
             overflow-x: hidden;
             position: relative;
         }
 
-        /* Minimal 3D tech particles background */
         #tech-bg {
             position: fixed;
             top: 0;
@@ -224,6 +222,28 @@
                 <h3>Healthcare System</h3>
                 <p>Flask-based healthcare management system to handle appointments, doctors, and payments.</p>
                 <a href="https://github.com/TanakaShumba/healthcare-system" target="_blank">View on GitHub</a>
+            </div>
+
+            <!-- New Projects Added -->
+            <div class="project-card">
+                <h3>Automated Vulnerability Scanner</h3>
+                <p>Demo parser mapping scanned hosts/ports to a sample CVE database using Python.</p>
+                <a href="https://github.com/TanakaShumba/automated-vulnerability-scanner" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>SIEM Log Parser Dashboard</h3>
+                <p>Python demo parsing SIEM logs and displaying alerts and insights.</p>
+                <a href="https://github.com/TanakaShumba/siem-log-parser" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>SOC Alert Triage Simulator</h3>
+                <p>Python simulation for triaging SOC alerts safely and efficiently.</p>
+                <a href="https://github.com/TanakaShumba/soc-alert-triage" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Windows Event Log Analyzer</h3>
+                <p>Python script to parse Windows Event Logs and summarize key security events.</p>
+                <a href="https://github.com/TanakaShumba/windows-event-log-analyzer" target="_blank">View on GitHub</a>
             </div>
         </div>
     </section>
